--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Integral.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Integral.cshtml
@@ -14,10 +14,10 @@
     <link href="~/css/null.css" rel="stylesheet" />
     <link href="~/css/dialog.css" rel="stylesheet" />
 
-    <script src="~/js/jquery-1.8.3.min.js"></script>
-    <script src="~/js/dialog.min.js"></script>
-    <script type="text/javascript" src="~/js/yjp.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
+    <script src="@ViewBag.osshost/js/dialog.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/Integral.js"></script>
 
 </head>
