--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentDetail.cshtml
@@ -18,12 +18,12 @@
     <link href="~/css/jquery.emoji.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     <link rel="stylesheet" type="text/css" href="~/css/c8-icon.css" />
-    <script type="text/javascript" src="~/js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="~/js/luo/dropload.min.js"></script>
-    <script type="text/javascript" src="~/js/dialog.min.js"></script>
-    <script src="~/js/luo/jquery.emoji.min.js"></script>
-    <script type="text/javascript" src="~/js/yjp.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/luo/dropload.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
+    <script src="@ViewBag.osshost/js/luo/jquery.emoji.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
