--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyAchievement.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyAchievement.cshtml
@@ -12,11 +12,11 @@
     <title>我的成绩</title>
     <link rel="stylesheet" type="text/css" href="~/css/mescroll.min.css" />
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <script src="~/js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="~/js/luo/mescroll.min.js"></script>
-    <script type="text/javascript" src="~/js/yjp.js"></script>
-    <script type="text/javascript" src="~/js/6caiSX.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/luo/mescroll.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/6caiSX.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/MyAchievement.js"></script>
 
 </head>
