--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set.cshtml
@@ -11,12 +11,10 @@
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     <link href="~/css/dialog.css" rel="stylesheet" />
     <link href="~/css/head1.css" rel="stylesheet" />
-
-    <script src="~/js/jquery-1.8.3.min.js"></script>
-    <link href="~/css/dialog.css" rel="stylesheet" />
-    <script src="~/js/dialog.min.js"></script>
-    <script src="~/js/yjp.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
+    <script src="@ViewBag.osshost/js/dialog.min.js"></script>
+    <script src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
     <script>
 
 
@@ -106,9 +104,9 @@
         <div id="view"></div>
     </article>
 
-    <script src="~/js/kcp/iscroll-zoom.js"></script>
-    <script src="~/js/kcp/hammer.js"></script>
-    <script src="~/js/kcp/jquery.photoClip.js"></script>
+    <script src="@ViewBag.osshost/js/kcp/iscroll-zoom.js"></script>
+    <script src="@ViewBag.osshost/js/kcp/hammer.js"></script>
+    <script src="@ViewBag.osshost/js/kcp/jquery.photoClip.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/Set.js"></script>
 
 </body>
