--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Voucher.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Voucher.cshtml
@@ -11,9 +11,9 @@
     <title>我的卡券</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     <link href="~/css/mescroll.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/js/jquery.js"></script>
-    <script type="text/javascript" src="~/js/yjp.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/Voucher.js"></script>
 
 </head>
