--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/VoucherRules.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/VoucherRules.cshtml
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>查看券规则</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 </head>
 
 <body>
