--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
@@ -22,11 +22,11 @@
     <title>开奖记录-@ViewBag.lotteryTypeName</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link href="~/css/mescroll.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="/js/function.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
-    <script type="text/javascript" src="~/Mdate/iScroll.js"></script>
-    <script type="text/javascript" src="~/Mdate/Mdate.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/function.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/Mdate/iScroll.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/Mdate/Mdate.js"></script>
 
 
 </head>
