--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Shared/BasePageLayout.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Shared/BasePageLayout.cshtml
@@ -9,8 +9,8 @@
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="~/css/c8-icon.css"/>
-    <script type="text/javascript" src="~/js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
 
     @RenderSection("headerScripts", required: false)
 </head>
