--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ChatRoomWS.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ChatRoomWS.cshtml
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/Chat/libs/CSSRESET.css">
     <link rel="stylesheet" href="/css/Chat/common.css">
     <link rel="stylesheet" href="/css/Chat/chat.css">
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 
 
 </head>
