--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
@@ -12,10 +12,10 @@
     <title>注册-万彩吧_快3_11选5_快乐10分_3d_彩票开奖查询</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
 
-    <script src="~/js/jquery-1.8.3.min.js"></script>
+    <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <link href="~/css/dialog.css" rel="stylesheet" />
-    <script src="~/js/dialog.min.js"></script>
-    <script src="~/js/yjp.js"></script>
+    <script src="@ViewBag.osshost/js/dialog.min.js"></script>
+    <script src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" >
         var vDataid=@Html.Raw(JsonConvert.SerializeObject(ViewData["id"]));
     </script>
