--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
@@ -9,13 +9,13 @@
     <title>设置密码-万彩吧_快3_11选5_快乐10分_3d_彩票开奖查询</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
 
-    <script src="~/js/jquery-1.8.3.min.js"></script>
+    <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
 
     <link href="~/css/dialog.css" rel="stylesheet" />
-    <script src="~/js/dialog.min.js"></script>
-    <script src="~/js/yjp.js"></script>
+    <script src="@ViewBag.osshost/js/dialog.min.js"></script>
+    <script src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/SetPassword.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
