--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/LotteryTime.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/LotteryTime.cshtml
@@ -16,7 +16,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 </head>
 <body>
     @if (platform != 1)
@@ -33,8 +33,8 @@
     <div class="rq-box"></div>
 
 
-    <script src="~/js/zepto.tap.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="~/js/opendate.js"></script>
+    <script src="@ViewBag.osshost/js/zepto.tap.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="@ViewBag.osshost/js/opendate.js"></script>
     <script type="text/javascript">
         var daTa;
         $.ajax({
