--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyIntegral.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyIntegral.cshtml
@@ -14,8 +14,8 @@
     <title>我的积分</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     <link href="~/css/mescroll.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/js/jquery.js"></script>
-    <script type="text/javascript" src="~/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/MyIntegral.js"></script>
 
 </head>
