--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyPlan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyPlan.cshtml
@@ -14,11 +14,11 @@
     <link rel="stylesheet" type="text/css" href="~/css/mescroll.min.css" />
     <link rel="stylesheet" type="text/css" href="~/css/dialog.css" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <script type="text/javascript" src="~/js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="~/js/luo/mescroll.min.js"></script>
-    <script type="text/javascript" src="~/js/dialog.min.js"></script>
-    <script type="text/javascript" src="~/js/yjp.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/luo/mescroll.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 </head>
 <body style="background:#F4F4F5; overflow-y: hidden;">
     <header class="hjc_header">
