--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Notice.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Notice.cshtml
@@ -16,12 +16,12 @@
     <link rel="stylesheet" type="text/css" href="~/css/dialog.css" />
     <link rel="stylesheet" href="~/css/jquery.emoji.css" />
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <script type="text/javascript" src="~/js/jquery.js"></script>
-    <script type="text/javascript" src="~/js/luo/mescroll.min.js"></script>
-    <script type="text/javascript" src="~/js/dialog.min.js"></script>
-    <script type="text/javascript" src="~/js/luo/jquery.emoji.min.js"></script>
-    <script type="text/javascript" src="~/js/yjp.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/luo/mescroll.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/luo/jquery.emoji.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5; overflow-y: hidden;">
