--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetAutograph.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetAutograph.cshtml
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>个人中心-设置-设置签名</title>
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-    <script src="~/js/jquery-1.8.3.min.js"></script>
+    <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <link href="~/css/dialog.css" rel="stylesheet" />
-    <script src="~/js/dialog.min.js"></script>
-    <script src="~/js/yjp.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script src="@ViewBag.osshost/js/dialog.min.js"></script>
+    <script src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/SetAutograph.js"></script>
 
 </head>
