--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TaskRule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TaskRule.cshtml
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>规则说明-赚钱任务</title>
     <link href="~/css/style.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/js/yjp.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 </head>
 <body>
     @if (platForm != 1)
