--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
@@ -14,10 +14,10 @@
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     <link href="~/css/dialog.css" rel="stylesheet" />
     <link href="~/css/mescroll.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/js/jquery.js"></script>
-    <script src="~/js/dialog.min.js"></script>
-    <script type="text/javascript" src="~/js/yjp.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
+    <script src="@ViewBag.osshost/js/dialog.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
     <script>
         var lType=@lType;  
     </script>
