--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/LastPlay.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/LastPlay.cshtml
@@ -15,10 +15,10 @@
     <title>最新预测-@ViewBag.LTypeName</title>
     <link rel="stylesheet" type="text/css" href="~/css/dialog.css" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <script type="text/javascript" src="/js/jquery.js"></script>
-    <script type="text/javascript" src="~/js/dialog.min.js"></script>
-    <script type="text/javascript" src="/js/yjp.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
