--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
@@ -20,9 +20,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>查看计划-@ViewBag.msg</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <script src="/js/jquery-1.8.3.min.js"></script>
-    <script src="/js/function.js"></script>
-    <script src="/js/runTime2.js"></script>
+    <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
+    <script src="@ViewBag.osshost/js/function.js"></script>
+    <script src="@ViewBag.osshost/js/runTime2.js"></script>
 
     <script src="~/js/yjp.js"></script>
     <script type="text/javascript" src="/js/baidu-statistics.js"></script>
