--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
                 </a>
             </li>
             <li>
-                <a href="/News/Index/2">
+                <a href="/News/NewIndex/2">
                     <i><img src="/images/grids_icon_07.png"></i>
                     <p>资讯</p>
                 </a>
