--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
@@ -18,7 +18,7 @@
     <link href="~/css/null.css" rel="stylesheet" />
     <link href="~/css/dialog.css" rel="stylesheet" />
     <script src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
-    <script src="@ViewBag.osshostjs/dialog.min.js"></script>>
+    <script src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/Gratuity.js"></script>
